# milan-alpha

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
algorithms/include/milan/algorithms/: FitResult.hh  HMC.hh  MLFitter.hh  RandomEngine.hh
algorithms/tests/: CMakeLists.txt  testHMC.cc  testMLFitter.cc  testRandomEngine.cc
cmake/: Copy.cmake  DetectOS.cmake  FindROOT.cmake  Tests.cmake  memcheck.py
core/: CMakeLists.txt
core/include/milan/core/: BinnedLikelihood.hh  Binning.hh  Exception.hh  FitResult.hh  Function.hh  FunctionInterface.hh  FunctionOperators.hh  HMC.hh  Histogram.hh  HistogramFunction.hh  HistogramInterface.hh  HistogramOperators.hh  Likelihood.hh  LikelihoodInterface.hh  LikelihoodOperators.hh  MLFitter.hh  Math.hh  Operators.hh  Parameter.hh  ParametericHistogram.hh  ParametricHistogram.hh  Prior.hh  Projection.hh  Ptr.hh  ScalarConstant.hh  Types.hh
core/src/: Histogram.cc
core/tests/: CMakeLists.txt  testBinning.cc  testFunction.cc  testHistogram.cc  testHistogramFunction.cc  testLikelihood.cc  testMLFitter.cc  testParameter.cc  testParametricHistogram.cc  testPrior.cc  testProjection.cc  testPtr-fail.cc  testPtr.cc  testScalarConstant.cc
operators/: CMakeLists.txt
operators/include/milan/operators/: Lifting.hh  Projection.hh  PseudoData.hh
operators/tests/: CMakeLists.txt  testProjection.cc  testPseudoData.cc
plugins/: CMakeLists.txt
plugins/include/milan/plugins/: Plugin.hh
plugins/src/: Plugin.cc
test/: CMakeLists.txt  simple.cc
tests/: test_macros.h
